--- a/CstoreProject/.classpath
+++ b/CstoreProject/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/java/java_pg/eclipse/lombok.jar"/>
-	<classpathentry kind="lib" path="D:/java/java_pg/eclipse/ojdbc6_g.jar"/>
+	<classpathentry kind="lib" path="D:/lombok-1.18.30.jar"/>
+	<classpathentry kind="lib" path="D:/ojdbc6_g.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
